--- a/recursos/vistas/vistaLoginEmail.fxml
+++ b/recursos/vistas/vistaLoginEmail.fxml
@@ -18,12 +18,12 @@
                   <Font name="Power Green" size="24.0" />
                </font>
             </Label>
-            <Label prefHeight="26.0" prefWidth="126.0" text="Introduce tu nombre:">
+            <Label fx:id="labelEmail" prefHeight="26.0" prefWidth="132.0" text="Introduce tu email:">
                <font>
-                  <Font name="Power Green" size="12.0" />
+                  <Font name="Power Green" size="17.0" />
                </font>
             </Label>
-            <TextField fx:id="tFJugador" maxHeight="27.0" maxWidth="210.0" minHeight="27.0" minWidth="180.0" opacity="0.82" prefHeight="27.0" prefWidth="210.0" promptText="Nombre..." style="-fx-border-color: black; -fx-effect: dropshadow(gaussian,rgba(0,0,0,0.5),4,0.5,0,1);">
+            <TextField fx:id="campoEmail" maxHeight="27.0" maxWidth="210.0" minHeight="27.0" minWidth="180.0" opacity="0.82" prefHeight="27.0" prefWidth="210.0" promptText="Email..." style="-fx-border-color: black; -fx-effect: dropshadow(gaussian,rgba(0,0,0,0.5),4,0.5,0,1);">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
@@ -31,7 +31,7 @@
                   <Font name="Power Green" size="12.0" />
                </font>
             </TextField>
-            <Button fx:id="botonJugador" mnemonicParsing="false" prefHeight="24.0" prefWidth="90.0" text="ACEPTAR">
+            <Button fx:id="botonEmail" mnemonicParsing="false" prefHeight="24.0" prefWidth="90.0" text="ACEPTAR">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
