--- a/recursos/vistas/vista1Escenario.fxml
+++ b/recursos/vistas/vista1Escenario.fxml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<HBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="400.0" minHeight="400.0" prefHeight="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane fx:id="grid" minHeight="320.0" maxHeight="320.0" minWidth="1280.0" maxWidth="1280.0">
+      <VBox maxHeight="400.0" maxWidth="0.0" minHeight="400.0" prefHeight="400.0" style="-fx-background-color: #323232;">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="1280.0" text="NIVEL BÁSICO" textFill="WHITE">
+               <font>
+                  <Font name="Power Green" size="33.0" />
+               </font>
+            </Label>
+            <GridPane fx:id="grid" maxHeight="320.0" maxWidth="1280.0" minHeight="320.0" minWidth="1280.0">
       </GridPane>
+            <Label fx:id="labelWASD" alignment="CENTER" layoutX="10.0" layoutY="330.0" prefHeight="20.0" prefWidth="83.0" text="WASD&gt;" textFill="WHITE">
+               <font>
+                  <Font name="Power Green" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="labelOuch" contentDisplay="CENTER" prefHeight="25.0" prefWidth="299.0" textFill="WHITE">
+               <font>
+                  <Font name="Power Green" size="16.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </HBox>
