--- a/recursos/vistas/vista2Escenario.fxml
+++ b/recursos/vistas/vista2Escenario.fxml
@@ -2,10 +2,13 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox alignment="TOP_CENTER" minHeight="200.0" maxHeight="200.0" minWidth="200.0" maxWidth="200.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="400.0" maxWidth="200.0" minHeight="400.0" minWidth="200.0" spacing="20.0" style="-fx-background-color: #323232; -fx-spacing: 10px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Vista 2" />
+      <Label prefHeight="63.0" prefWidth="78.0" text="Vista 2" textFill="WHITE">
+         <font>
+            <Font name="Power Green" size="28.0" />
+         </font></Label>
    </children>
 </VBox>
