--- a/recursos/vistas/vistaMenu.fxml
+++ b/recursos/vistas/vistaMenu.fxml
@@ -1,13 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="600.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="600.0" style="-fx-background-color: #323232; -fx-spacing: 20px;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="botonFacil" mnemonicParsing="false" prefHeight="61.0" prefWidth="138.0" text="Facil" />
-      <Button fx:id="botonMedio" mnemonicParsing="false" prefHeight="63.0" prefWidth="139.0" text="Medio" />
-      <Button fx:id="botonDificil" mnemonicParsing="false" prefHeight="60.0" prefWidth="139.0" text="Dificil" />
+      <Label text="LABYRINTHUS" textFill="#ffea00">
+         <font>
+            <Font name="Power Green" size="48.0" />
+         </font>
+      </Label>
+      <Label text="Elige dificultad..." textFill="#ffea00">
+         <font>
+            <Font name="Power Green" size="17.0" />
+         </font>
+      </Label>
+      <Button fx:id="botonFacil" mnemonicParsing="false" prefHeight="39.0" prefWidth="138.0" text="Facil">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="botonMedio" mnemonicParsing="false" prefHeight="39.0" prefWidth="139.0" text="Medio">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="botonDificil" mnemonicParsing="false" prefHeight="36.0" prefWidth="139.0" text="Dificil">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="botonSalir" mnemonicParsing="false" prefHeight="36.0" prefWidth="139.0" text="Salir">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </VBox>
