--- a/recursos/vistas/vistaBienvenida.fxml
+++ b/recursos/vistas/vistaBienvenida.fxml
@@ -7,55 +7,55 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="355.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <StackPane prefHeight="334.0" prefWidth="640.0">
+      <StackPane prefHeight="334.0" prefWidth="640.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);">
          <children>
-            <ImageView fitHeight="400.0" fitWidth="640.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../fondoSplash.jpg" />
+                  <Image url="@../../compilados/kobe-ouano-vampire-castle-watermarked.gif" />
                </image>
             </ImageView>
-            <VBox alignment="CENTER" prefHeight="379.0" prefWidth="640.0">
+            <VBox alignment="TOP_CENTER" prefHeight="379.0" prefWidth="640.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="102.0" prefWidth="342.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LABYRINTHUS" textFill="#ffe500">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="144.0" prefWidth="566.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LABYRINTHUS" textFill="#ffe500">
                      <font>
-                        <Font name="Power Green" size="66.0" />
+                        <Font name="Power Green" size="96.0" />
                      </font>
                   </Label>
-                  <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="48.0" prefWidth="274.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LA ÚLTIMA PRUEBA" textFill="#ffe500">
+                  <Label alignment="TOP_CENTER" contentDisplay="CENTER" prefHeight="80.0" prefWidth="414.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LA ÚLTIMA PRUEBA" textFill="#ffe500">
                      <font>
-                        <Font name="Power Green" size="37.0" />
+                        <Font name="Power Green" size="52.0" />
                      </font>
                   </Label>
-                  <Label alignment="TOP_CENTER" prefHeight="18.0" prefWidth="63.0" text="CRÉDITOS:" textFill="#ffe500">
+                  <Label alignment="CENTER" prefHeight="47.0" prefWidth="133.0" text="CRÉDITOS:" textFill="#ffe500">
                      <font>
-                        <Font name="Power Green" size="16.0" />
+                        <Font name="Power Green" size="34.0" />
                      </font>
                   </Label>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="15.0" prefWidth="58.0" text="SANDRA MOÑINO" textFill="#ffe500">
+                  <Label alignment="CENTER" prefHeight="34.0" prefWidth="131.0" text="SANDRA MOÑINO" textFill="#ffe500">
                      <font>
-                        <Font name="Power Green" size="10.0" />
+                        <Font name="Power Green" size="20.0" />
                      </font>
                   </Label>
-                  <Label alignment="TOP_CENTER" prefHeight="13.0" prefWidth="58.0" text="CRISTO MACIAS" textFill="#ffe500">
+                  <Label alignment="TOP_CENTER" prefHeight="13.0" prefWidth="117.0" text="CRISTO MACIAS" textFill="#ffe500">
                      <font>
-                        <Font name="Power Green" size="10.0" />
+                        <Font name="Power Green" size="20.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="25.0" prefWidth="59.0" text="LICENCIA:" textFill="#ffe500">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="70.0" prefWidth="133.0" text="LICENCIA:" textFill="#ffe500">
                      <font>
-                        <Font name="Power Green" size="15.0" />
+                        <Font name="Power Green" size="34.0" />
                      </font>
                   </Label>
-                  <Label text="GPL v3" textFill="#ffe500">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="51.0" text="GPL v3" textFill="#ffe500">
                      <font>
-                        <Font name="Power Clear" size="12.0" />
+                        <Font name="Power Clear" size="20.0" />
                      </font>
                   </Label>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="39.0" prefWidth="182.0" text="PULSA CUALQUIER TECLA PARA COMENZAR" textFill="#ffe500">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="42.0" prefWidth="346.0" text="(PULSA CUALQUIER TECLA PARA COMENZAR)" textFill="#ffe500">
                      <font>
-                        <Font name="Power Clear" size="10.0" />
+                        <Font name="Power Clear" size="19.0" />
                      </font>
                   </Label>
                </children>
