--- a/recursos/vistas/vista1Escenario.fxml
+++ b/recursos/vistas/vista1Escenario.fxml
@@ -6,23 +6,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="400.0" minHeight="400.0" prefHeight="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox maxHeight="400.0" maxWidth="0.0" minHeight="400.0" prefHeight="400.0" style="-fx-background-color: #323232;">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="1280.0" text="NIVEL BÁSICO" textFill="WHITE">
+            <Label fx:id="labelTitulo" alignment="CENTER" contentDisplay="CENTER" prefHeight="38.0" prefWidth="1280.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LA ÚLTIMA PRUEBA..." textFill="#ffcc00">
                <font>
                   <Font name="Power Green" size="33.0" />
                </font>
             </Label>
-            <GridPane fx:id="grid" maxHeight="320.0" maxWidth="1280.0" minHeight="320.0" minWidth="1280.0">
+            <GridPane fx:id="grid" minHeight="320.0" minWidth="1280.0" prefHeight="320.0" prefWidth="1280.0">
       </GridPane>
-            <Label fx:id="labelWASD" alignment="CENTER" layoutX="10.0" layoutY="330.0" prefHeight="20.0" prefWidth="83.0" text="WASD&gt;" textFill="WHITE">
+            <Label fx:id="labelWASD" alignment="CENTER" layoutX="10.0" layoutY="330.0" prefHeight="20.0" prefWidth="83.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="WASD&gt;" textFill="#ffcc00">
                <font>
                   <Font name="Power Green" size="24.0" />
                </font>
             </Label>
-            <Label fx:id="labelOuch" contentDisplay="CENTER" prefHeight="25.0" prefWidth="299.0" textFill="WHITE">
+            <Label fx:id="labelOuch" contentDisplay="CENTER" prefHeight="25.0" prefWidth="299.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" textFill="#ffffffc9">
                <font>
                   <Font name="Power Green" size="16.0" />
                </font>
