--- a/recursos/vistas/vistaLoginNombre.fxml
+++ b/recursos/vistas/vistaLoginNombre.fxml
@@ -13,7 +13,7 @@
    <children>
       <VBox alignment="CENTER" maxHeight="150.0" maxWidth="402.0" minHeight="148.0" minWidth="300.0" prefHeight="148.0" prefWidth="402.0" style="-fx-spacing: 15px;">
          <children>
-            <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="356.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,2,2);" text="LABYRINTHUS: LA ÚLTIMA PRUEBA" textFill="#ffd200">
+            <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="356.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,2,2);" text="LABYRINTHUS: LA ÚLTIMA PRUEBA" textFill="#ffcc00">
                <font>
                   <Font name="Power Green" size="28.0" />
                </font>
