--- a/recursos/vistas/vistaFinJuego.fxml
+++ b/recursos/vistas/vistaFinJuego.fxml
@@ -7,46 +7,88 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" style="-fx-spacing: 20px; -fx-background-color: #323232;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" style="-fx-spacing: 20px; -fx-background-color: #323232;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label prefHeight="43.0" prefWidth="354.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="¡ENHORABUENA!" textFill="#ffcc00">
-         <font>
-            <Font name="Power Green" size="64.0" />
-         </font>
-      </Label>
-      <Label fx:id="labelNombreJugador" alignment="CENTER" prefHeight="24.0" prefWidth="354.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" textFill="#ffcc00">
-         <font>
-            <Font name="Power Green" size="31.0" />
-         </font>
-      </Label>
-      <Label style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="FIN DEL LABERINTO" textFill="#ffcc00">
-         <font>
-            <Font name="Power Green" size="29.0" />
-         </font>
-      </Label>
-      <StackPane maxHeight="73.0" minHeight="40.0" prefHeight="73.0" prefWidth="600.0">
+      <StackPane prefHeight="150.0" prefWidth="200.0">
          <children>
-            <ImageView fitHeight="81.0" fitWidth="465.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="606.0" fitWidth="804.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../brilloFondo.gif" />
+                  <Image url="@../../compilados/paredFin.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="73.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../jugador.gif" />
-               </image>
-            </ImageView>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label alignment="BOTTOM_CENTER" prefHeight="102.0" prefWidth="517.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="¡ENHORABUENA!" textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="64.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelNombreJugador" alignment="CENTER" prefHeight="54.0" prefWidth="354.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="31.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER" prefHeight="36.0" prefWidth="229.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="FIN DEL LABERINTO" textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="29.0" />
+                     </font>
+                  </Label>
+                  <StackPane maxHeight="160.0" minHeight="40.0" prefHeight="160.0" prefWidth="804.0">
+                     <children>
+                        <ImageView fitHeight="183.0" fitWidth="221.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../compilados/brilloFondo.gif" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="91.0" fitWidth="83.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../compilados/jugador.gif" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </StackPane>
+                  <Label fx:id="labelMonedas" alignment="CENTER" contentDisplay="BOTTOM" prefHeight="41.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="TOTAL MONEDAS: " textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelLlave" alignment="CENTER" contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LLAVE: " textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelTotalChocado" alignment="CENTER" contentDisplay="BOTTOM" prefHeight="51.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="TOTAL VECES CHOCADO:" textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelMonedas1" alignment="CENTER" contentDisplay="BOTTOM" prefHeight="40.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="TIEMPO: " textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="20.0" />
+                     </font>
+                  </Label>
+                  <VBox alignment="CENTER" prefHeight="143.0" prefWidth="804.0">
+                     <children>
+                        <Label fx:id="labelTiempo" alignment="TOP_CENTER" contentDisplay="BOTTOM" prefHeight="38.0" prefWidth="301.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="PUNTUACIÓN TOTAL " textFill="#ffcc00">
+                           <font>
+                              <Font name="Power Green" size="37.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="labelPuntuacion" alignment="BOTTOM_CENTER" contentDisplay="BOTTOM" prefHeight="44.0" prefWidth="79.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="100" textFill="#ffcc00">
+                           <font>
+                              <Font name="Power Green" size="37.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <Label alignment="TOP_CENTER" contentDisplay="BOTTOM" prefHeight="41.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="(Pulsa cualquier tecla para volver al Menú)" textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
          </children>
       </StackPane>
-      <Label fx:id="labelTotalChocado" alignment="BOTTOM_CENTER" contentDisplay="BOTTOM" prefHeight="39.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="TOTAL VECES CHOCADO:" textFill="#ffcc00">
-         <font>
-            <Font name="Power Green" size="13.0" />
-         </font>
-      </Label>
-      <Label alignment="BOTTOM_CENTER" contentDisplay="BOTTOM" prefHeight="27.0" prefWidth="279.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="(Pulsa cualquier tecla para volver al Menú)" textFill="#ffcc00">
-         <font>
-            <Font name="Power Green" size="12.0" />
-         </font>
-      </Label>
    </children>
 </VBox>
